2014-08-04
- Makefile bios/coldfire.c bios/coldfire.h bios/coldfire2.S bios/coldpriv.h
  include/config.h: New target: "make m548x-bas_gcc". This allows to flash
  EmuTOS on M548x and run it from BaS_gcc. Contributed by Markus Fröschle. (VRI)

2014-08-25
- bios/dmasound.c: Improved return values for setinterrupt() on STE/TT. (THH)

2014-09-14
- vdi/vdi_text.c: Select among default fonts, according to vertical
  screen resolution. (RFB)
- doc/country.txt bios/fnt_gr_6x6.c bios/fnt_l2_6x6.c bios/fnt_l9_6x6.c
  bios/fnt_ru_6x6.c: Code cleanup: remove misleading F_DEFAULT flag from
  non-English 6x6 fonts and fix documentation. (RFB)

2014-09-15
- bios/screen.c bios/screen.h vdi/vdi_control.c: Fix aspect ratio values
  returned by v_opnwk() (fixes v_arc()/v_pieslice()/v_circle() display in
  medium res). (RFB)

2014-09-16
- vdi/vdi_tblit.S vdi/vdi_tblit_cf.S: Fix crash due to text blit outside
  screen area. (RFB)

2014-09-17
- printbss.sh: Rewritten using the "size" tool. Much simpler. (VRI).
- doc/bugs.txt: Updated to reflect recent bug fixes.  Contributed by Eero
  Tamminen. (RFB)

2014-09-19
- bios/fnt_gr_6x6.c bios/fnt_st_6x6.c: Make 'right offset' in font header
  the same as TOS. (RFB)

2014-09-20
- vdi/vdi_text.c: Small code optimisation. (RFB)
- vdi/vdi_text.c: Fix values returned by vqt_extent() for outlined text. (RFB)

2014-09-22
- vdi/vdi_gdp.c: Fix bug: v_pieslice() & v_ellpie() did not draw small
  slices. (RFB)

2014-09-25
- vdi/vdi_text.c: Remove unnecessary (and wrong) NDC handling in
  vst_height(). (RFB)
- vdi/vdi_text.c: Revert 'small code optimisation' of 2014-09-20: does
  not work for scaled fonts. (RFB)
- vdi/vdi_text.c: Fix bug: vqt_extent() output for 270 rotation was
  incorrect. (RFB)
- vdi/vdi_text.c: Reduce code size in vqt_extent(). (RFB)

2014-09-29
- vdi/vdi_text.c: Fix vst_rotation(): it now behaves like TOS3/TOS4,
  rather than buggy TOS1. (RFB)

2014-10-09
- bdos/fs.h bdos/proc.h include/pd.h: Moved declaration of run to pd.h. (VRI)